// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompanyForm snapshot empty 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlNome"
        >
          Nome
        </label>
        <input
          class="form-control"
          id="ctrlNome"
          name="nome"
          placeholder="Nome da Empresa"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlNomeContato"
        >
          Contato
        </label>
        <input
          class="form-control"
          id="ctrlNomeContato"
          name="nomeContato"
          placeholder="Nome Responsável"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlCNPJ"
        >
          CNPJ
        </label>
        <input
          class="form-control"
          id="ctrlCNPJ"
          name="cnpj"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlEMAIL"
        >
          E-mail
        </label>
        <input
          class="form-control"
          id="ctrlEMAIL"
          name="email"
          placeholder="email@email.com"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlCodPostal"
        >
          CEP
        </label>
        <input
          class="form-control"
          id="ctrlCodPostal"
          name="codPostal"
          placeholder="00000-000"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlEstado"
        >
          Estado
        </label>
        <input
          class="form-control"
          id="ctrlEstado"
          name="estado"
          placeholder="Estado"
          type="text"
          value=""
        />
      </div>
      <div
        class="form-group col-md-3"
      >
        <label
          class="form-label"
          for="ctrlCidade"
        >
          Cidade
        </label>
        <input
          class="form-control"
          id="ctrlCidade"
          name="cidade"
          placeholder="Cidade"
          type="text"
          value=""
        />
      </div>
      <div
        class="form-group col-md-3"
      >
        <label
          class="form-label"
          for="ctrlBairro"
        >
          Bairro
        </label>
        <input
          class="form-control"
          id="ctrlBairro"
          name="bairro"
          placeholder="Bairro"
          type="text"
          value=""
        />
      </div>
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlPais"
        >
          Pais
        </label>
        <input
          class="form-control"
          id="ctrlPais"
          name="pais"
          placeholder="Pais"
          type="text"
          value="Brasil"
        />
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-8"
      >
        <label
          class="form-label"
          for="ctrlLogradouro"
        >
          Logradouro
        </label>
        <input
          class="form-control"
          id="ctrlLogradouro"
          name="logradouro"
          placeholder="Logradouro"
          type="text"
          value=""
        />
      </div>
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlNumero"
        >
          Número
        </label>
        <input
          class="form-control"
          id="ctrlNumero"
          name="numero"
          placeholder="Numero"
          type="text"
          value=""
        />
      </div>
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlComplemento"
        >
          Complemento
        </label>
        <input
          class="form-control"
          id="ctrlComplemento"
          name="complemento"
          placeholder="Complemento"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlTelefone1"
        >
          Telefone Principal
        </label>
        <input
          class="form-control"
          id="ctrlTelefone1"
          name="telefone1"
          placeholder="(99)9999-9999X"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlTelefone2"
        >
          Telefone Secundário
        </label>
        <input
          class="form-control"
          id="ctrlTelefone2"
          name="telefone2"
          placeholder="(99)9999-9999X"
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      class="btn btn-primary"
      type="submit"
    >
      Salvar
    </button>
  </form>
</div>
`;

exports[`CompanyForm snapshot with data 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlNome"
        >
          Nome
        </label>
        <input
          class="form-control"
          id="ctrlNome"
          name="nome"
          placeholder="Nome da Empresa"
          type="text"
          value="BIILOG MOCK"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlNomeContato"
        >
          Contato
        </label>
        <input
          class="form-control"
          id="ctrlNomeContato"
          name="nomeContato"
          placeholder="Nome Responsável"
          type="text"
          value="Edmondo Gazzillo"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlCNPJ"
        >
          CNPJ
        </label>
        <input
          class="form-control"
          id="ctrlCNPJ"
          name="cnpj"
          value="39.282.099/0001-05"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlEMAIL"
        >
          E-mail
        </label>
        <input
          class="form-control"
          id="ctrlEMAIL"
          name="email"
          placeholder="email@email.com"
          value="edmondo.gazzillo@gmail.com"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlCodPostal"
        >
          CEP
        </label>
        <input
          class="form-control"
          id="ctrlCodPostal"
          name="codPostal"
          placeholder="00000-000"
          type="text"
          value="04557-030"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlEstado"
        >
          Estado
        </label>
        <input
          class="form-control"
          id="ctrlEstado"
          name="estado"
          placeholder="Estado"
          type="text"
          value="São Paulo"
        />
      </div>
      <div
        class="form-group col-md-3"
      >
        <label
          class="form-label"
          for="ctrlCidade"
        >
          Cidade
        </label>
        <input
          class="form-control"
          id="ctrlCidade"
          name="cidade"
          placeholder="Cidade"
          type="text"
          value="São Paulo"
        />
      </div>
      <div
        class="form-group col-md-3"
      >
        <label
          class="form-label"
          for="ctrlBairro"
        >
          Bairro
        </label>
        <input
          class="form-control"
          id="ctrlBairro"
          name="bairro"
          placeholder="Bairro"
          type="text"
          value="Brooklin Paulista"
        />
      </div>
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlPais"
        >
          Pais
        </label>
        <input
          class="form-control"
          id="ctrlPais"
          name="pais"
          placeholder="Pais"
          type="text"
          value="Brasil"
        />
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-8"
      >
        <label
          class="form-label"
          for="ctrlLogradouro"
        >
          Logradouro
        </label>
        <input
          class="form-control"
          id="ctrlLogradouro"
          name="logradouro"
          placeholder="Logradouro"
          type="text"
          value="Rua Marquês de Cascais"
        />
      </div>
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlNumero"
        >
          Número
        </label>
        <input
          class="form-control"
          id="ctrlNumero"
          name="numero"
          placeholder="Numero"
          type="text"
          value="152"
        />
      </div>
      <div
        class="form-group col-md-2"
      >
        <label
          class="form-label"
          for="ctrlComplemento"
        >
          Complemento
        </label>
        <input
          class="form-control"
          id="ctrlComplemento"
          name="complemento"
          placeholder="Complemento"
          type="text"
          value="Sala 2"
        />
      </div>
    </div>
    <div
      class="form-row"
    >
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlTelefone1"
        >
          Telefone Principal
        </label>
        <input
          class="form-control"
          id="ctrlTelefone1"
          name="telefone1"
          placeholder="(99)9999-9999X"
          type="text"
          value="(11)3205-1654"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group col-md-6"
      >
        <label
          class="form-label"
          for="ctrlTelefone2"
        >
          Telefone Secundário
        </label>
        <input
          class="form-control"
          id="ctrlTelefone2"
          name="telefone2"
          placeholder="(99)9999-9999X"
          type="text"
          value="(11)3205-1654"
        />
      </div>
    </div>
    <button
      class="btn btn-primary"
      type="submit"
    >
      Salvar
    </button>
  </form>
</div>
`;
